Cleanup (canonical resource usage; formatting)
GitOrigin-RevId: 7cd7e56b8a276a96a3737549f9a5347e8da4565c